# memobox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-EN.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: dogfooding.md  schema.md
evals/: README.md  example-results.jsonl  record.py  run.schema.json  summarize.py  tasks.json
examples/: demo.py
hooks/: hooks.json
skills/curate/: SKILL.md
skills/curate/agents/: openai.yaml
skills/recall/: SKILL.md
skills/recall/agents/: openai.yaml
skills/remember/: SKILL.md
skills/remember/agents/: openai.yaml
skills/using-memobox/: SKILL.md
skills/using-memobox/agents/: openai.yaml
src/memobox/: __init__.py  cli.py  models.py  search.py  store.py
src/memobox/hooks/: __init__.py  precompact_snapshot.py
tests/: test_evals.py  test_memobox.py  test_precompact_hook.py
