[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memobox"
version = "0.1.0"
description = "Task-level MemoBox memory system for agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
memobox = "memobox.cli:main"
amb = "memobox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
