[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memobox"
version = "0.1.0"
description = "Task-level MemoBox memory system for agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "fanjingwen" }]
keywords = [
  "agent-memory",
  "ai-agents",
  "llm",
  "memory",
  "retrieval",
  "jsonl",
  "cli",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
memobox = "memobox.cli:main"
amb = "memobox.cli:main"

[project.urls]
Homepage = "https://github.com/study8677/memobox"
Repository = "https://github.com/study8677/memobox"
Issues = "https://github.com/study8677/memobox/issues"
Documentation = "https://github.com/study8677/memobox#readme"

[tool.setuptools.packages.find]
where = ["src"]
